# mhr_roulette_bot

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  build.rs  license_template
.github/workflows/: audit.yml  catch_and_flow.yml  release.yml
roulette_macros/: Cargo.toml
roulette_macros/impl/: Cargo.toml
roulette_macros/impl/src/: internal.rs  lib.rs
roulette_macros/impl/src/internal/: ast.rs  expand.rs  fmt.rs  props.rs  valid.rs
roulette_macros/src/: lib.rs
roulette_macros/tests/: objective.rs
src/: bot.rs  build_info.rs  concepts.rs  data.rs  error.rs  executors.rs  github.rs  global.rs  lib.rs  main.rs  model.rs  parser.rs  stream.rs
src/data/: config.rs  monsters.rs  objectives.rs  quests.rs  weapon.rs
src/executors/: endpoint.rs  generate.rs  settings.rs  statistics.rs  utility.rs  version.rs
src/github/: builder.rs  client.rs
src/model/: request.rs  response.rs  translate.rs
src/model/request/: component.rs  structure.rs
src/model/response/: commands.rs  component.rs  structure.rs  translators.rs
src/parser/: parse.rs  validators.rs
