[package]
name = "mhr_roulette"
version = "1.0.0"
authors = ["Mitama <loligothick@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
built = { version = "0.5", features = ["chrono", "git2"] }

[dependencies]
anyhow = { version = "1.0.40", features = ["backtrace"] }
clap = "2.33.3"
itertools = "0.10.0"
once_cell = "1.7.2"
rand = "0.8.3"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
toml = "0.5.8"
boolinator = "2.4.0"
indexmap = "1.6.2"
strum = "0.21.0"
strum_macros = "0.21.1"
octocrab = "0.9.1"
thiserror = "1.0.25"
static_assertions = "1.1.0"
derive_more = "0.99.14"
lazy-regex = "2.2.1"
async-stream = "0.3.2"
bytes = "1.0.1"
chrono = "0.4.19"
chrono-tz = "0.5.3"
log = "0.4.14"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
indoc = "1.0.3"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
byteorder = "1.4.3"
sqlite = "0.26.0"
http = "0.2.4"
roulette_macros = { version = "0.1.0", path = "roulette_macros" }
tracing-appender = "0.1.2"

[dependencies.serenity]
version = "0.10.8"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
